--- a/project/cola/src/theme/common.css
+++ b/project/cola/src/theme/common.css
@@ -1,12 +1,45 @@
+/*
+* 排版样式
+*/
+* {
+    margin: 0;
+    padding: 0;
+}
+html, body {
+    height: 100%;
+    width: 100%;
+}
+
+.bot0 {
+    bottom: 0px;
+}
+
+.h-100 {
+    height: 100%;
+}
 .h50 {
-	height: 50px
+    height: 50px
+}
+
+.ml10 {
+    margin-left: 10px;
 }
 .mt100 {
-	margin-top: 100px;
+    margin-top: 100px;
 }
-.ml10 {
-	margin-left: 10px;
+
+.ps-a {
+    position: absolute;
 }
+
+.top0 {
+    top: 0px;
+}
+
+.w-100 {
+    width: 100%;
+}
+
 .w500 {
-	width: 500px;
+    width: 500px;
 }
