--- a/project/cola/src/views/Login.html
+++ b/project/cola/src/views/Login.html
@@ -6,53 +6,54 @@
     </div>
     <div class="panel-body">
         <div class="row">
-        	<div class="col-md-12">
-        		<form class="form-horizontal" role="form">
-        			<div class="form-group">
-        				<label class="col-md-2 control-label">
-        					<span ng-bind="i18n.login_user_name"></span>
-        				</label>
-        				<div class="col-md-9">
-        					<input type="text"
-        						class="form-control"
-        						ng-model="userInfo.name">
-        				</div>
-        			</div>
-        			<div class="form-group">
-        				<label class="col-md-2 control-label">
-        					<span ng-bind="i18n.login_password"></span>
-        				</label>
-        				<div class="col-md-9">
-        					<input type="password"
-        						class="form-control"
-        						ng-model="userInfo.password">
-        				</div>
-        			</div>
-        			<div class="form-group">
-        				<div class="col-md-offset-2 col-md-10">
-        					<div class="checkbox">
-        						<label>
-        							<input type="checkbox"
-        								ng-model="userInfo.autoLogin">
-        								<span ng-bind="i18n.login_auto"></span>
-        						</label>
-        					</div>
-        				</div>
-        			</div>
-        			<div class="form-group">
-        				<div class="col-md-offset-2 col-md-10">
-        					<button type="submit"
-        						class="btn btn-default"
-                                ng-bind="i18n.login_login">
-        					</button>
-        					<button type="submit"
-        						class="btn btn-default ml10"
+            <div class="col-md-12">
+                <form class="form-horizontal" role="form">
+                    <div class="form-group">
+                        <label class="col-md-2 control-label">
+                            <span ng-bind="i18n.login_user_name"></span>
+                        </label>
+                        <div class="col-md-9">
+                            <input type="text"
+                                class="form-control"
+                                ng-model="userInfo.name">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-md-2 control-label">
+                            <span ng-bind="i18n.login_password"></span>
+                        </label>
+                        <div class="col-md-9">
+                            <input type="password"
+                                class="form-control"
+                                ng-model="userInfo.password">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox"
+                                        ng-model="userInfo.autoLogin">
+                                        <span ng-bind="i18n.login_auto"></span>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <button type="submit"
+                                class="btn btn-default"
+                                ng-bind="i18n.login_login"
+                                ng-click="userInfo.loginFn();">
+                            </button>
+                            <button type="submit"
+                                class="btn btn-default ml10"
                                 ng-bind="i18n.login_register">
-        					</button>
-        				</div>
-        			</div>
-        		</form>
-        	</div>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
