--- a/project/cola/src/views/LeftNav.html
+++ b/project/cola/src/views/LeftNav.html
@@ -1,1 +1,7 @@
-a
+<div role="navigation">
+	<ul class="nav nav-pills nav-stacked">
+	    <li ng-class="{'active': item.active}" ng-repeat="item in accordionMenu track by $index">
+	    	<a ng-bind="item.name" ng-click="item.click($index);"></a>
+	    </li>
+	</ul> 
+</div>
