--- a/project/cola/src/views/Manage.html
+++ b/project/cola/src/views/Manage.html
@@ -1,11 +1,16 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-3">
-			<div ui-view="leftNav">
+			<div role="navigation">
+				<ul class="nav nav-pills nav-stacked">
+				    <li ng-class="{'active': item.active}" ng-repeat="item in accordionMenu track by $index">
+				    	<a ng-bind="item.name" ng-click="item.click($index);"></a>
+				    </li>
+				</ul> 
 			</div>
 		</div>
 		<div class="col-md-9">
-			<div ui-view="mainContent">
+			<div ui-view>
 			</div>
 		</div>
 	</div>
