--- a/project/spaceMe/src/theme/css/base.css
+++ b/project/spaceMe/src/theme/css/base.css
@@ -109,6 +109,9 @@ button, input[type=button], input[type=submit] {
 .oh {
 	overflow: hidden;
 }
+.none {
+	display: none;
+}
 .mt10 {
 	margin-top: 10px;
 }
